--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     </head>
 
     <body>
+        <h1>Graph My OSRS Stats</h1>
+        <p>Search by username</p>
+        <input type="text" id="username-input" />
+        <button type="submit" onclick="lookup();">Lookup</button>
+
+        
+
         <!--Div that will hold the pie chart-->
         <div id="chart_div"></div>
     </body>
