--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,7 +6,7 @@
             type="text/javascript"
             src="https://www.gstatic.com/charts/loader.js"
         ></script>
-        <script type="text/javascript" src="../index.js"></script>
+        <script type="text/javascript" src="bundle.js"></script>
     </head>
 
     <body>
